# cvmatrix

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/test/: action.yml
.github/workflows/: package_workflow.yml  pull_request_package_workflow.yml  pull_request_test_workflow.yml  test_workflow.yml
benchmarks/: benchmark.py  benchmark_results.csv  benchmark_results_jax.csv  plot_benchmark.py
cvmatrix/: __init__.py  cvmatrix.py  partitioner.py
docs/: conf.py
docs/source/: cvmatrix.rst  partitioner_module.rst
examples/: training_matrices.py  training_matrices_jax.py
tests/: load_data.py  naive_cvmatrix.py  test_cvmatrix.py
