[tool.poetry]
name = "cvmatrix"
version = "3.1.5"
description = "Fast computation of possibly weighted and possibly centered/scaled training set kernel matrices in a cross-validation setting."
authors = ["Sm00thix <oleemail@icloud.com>"]
maintainers = ["Sm00thix <oleemail@icloud.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://cvmatrix.readthedocs.io/en/latest/"
repository = "https://github.com/Sm00thix/CVMatrix"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--typeguard-packages=ikpls",
    "--cov=ikpls",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
]