[project]
name = "cvmatrix"
version = "3.2.1"
description = "Fast computation of possibly weighted and possibly centered/scaled training set kernel matrices in a cross-validation setting."
authors = [{ name = "Sm00thix", email = "oleemail@icloud.com" }]
maintainers = [{ name = "Sm00thix", email = "oleemail@icloud.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11, <3.15"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
# Optional JAX backend (backend="jax"): enables tracing the per-fold training-matrix
# computations under jax.jit/jax.vmap on CPU/GPU/TPU. Install with `cvmatrix[jax]`.
jax = ["jax>=0.4.0"]

[project.urls]
Homepage = "https://cvmatrix.readthedocs.io/en/latest/"
Repository = "https://github.com/Sm00thix/CVMatrix"

# Development/test-only dependencies (PEP 735). Installed by `uv sync`.
[dependency-groups]
dev = [
    "pandas",
    "pytest",
    "pytest-cov",
    "typeguard",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvmatrix"]

[tool.pytest.ini_options]
addopts = [
    "--typeguard-packages=cvmatrix",
    "--cov=cvmatrix",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
]
